<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textViewNameHint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/text_view_hint_text"/>

    <Button
        android:id="@+id/buttonActivity1"
        style="@style/MainActivityButtonTheme"
        android:text="@string/button_activity_1_text" />

    <Button
        android:id="@+id/buttonActivity2"
        style="@style/MainActivityButtonTheme"
        android:text="@string/button_activity_2_text" />

    <Button
        android:id="@+id/buttonActivity3"
        style="@style/MainActivityButtonTheme"
        android:text="@string/button_activity_3_text" />

</LinearLayout>