<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="@dimen/padding_in_dp"
    android:paddingEnd="@dimen/padding_in_dp"
    android:paddingBottom="@dimen/padding_in_dp">

    <TextView
        android:id="@+id/textViewAccountDataHint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:text="@string/account_data_hint_text"
        android:textColor="@color/colorSquash"
        android:textSize="14sp"
        android:textStyle="normal"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewNameHint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/TextHintTheme"
        android:text="@string/name_hint_text"
        android:layout_marginTop="31dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewAccountDataHint"/>

    <TextView
        android:id="@+id/textViewName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        style="@style/TextContentTheme"
        tools:text="Анастасия"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewNameHint"/>

    <TextView
        android:id="@+id/textViewSurnameHint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/TextHintTheme"
        android:text="@string/surname_hint_text"
        android:layout_marginTop="26dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewName"/>

    <TextView
        android:id="@+id/textViewSurname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        style="@style/TextContentTheme"
        tools:text="Антонина"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewSurnameHint"/>

    <TextView
        android:id="@+id/textViewEmailHint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/TextHintTheme"
        android:text="@string/email_hint_text"
        android:layout_marginTop="26dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewSurname"/>

    <TextView
        android:id="@+id/textViewEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        style="@style/TextContentTheme"
        tools:text="anykee.box@gmail.ru"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewEmailHint"/>


    <TextView
        android:id="@+id/textViewLoginHint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/TextHintTheme"
        android:text="@string/login_hint_text"
        android:layout_marginTop="26dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewEmail"/>

    <TextView
        android:id="@+id/textViewLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        style="@style/TextContentTheme"
        tools:text="HIE023UOI88"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewLoginHint"/>

    <TextView
        android:id="@+id/textViewRegionHint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/TextHintTheme"
        android:text="@string/region_hint_text"
        android:layout_marginTop="26dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewLogin"/>

    <TextView
        android:id="@+id/textViewRegion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        style="@style/TextContentTheme"
        tools:text="Санкт-Петербург"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewRegionHint"/>


        <TextView
            android:id="@+id/textViewExitButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/TextContentTheme"
            android:background="?attr/selectableItemBackground"
            android:text="@string/exit_hint_text"
            android:layout_marginTop="48dp"
            android:layout_marginBottom="16dp"
            android:drawableStart="@drawable/ic_menu_exit"
            android:drawablePadding="31dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewRegion"
            />


</androidx.constraintlayout.widget.ConstraintLayout>